feat(frontend): add UI tab Friend
